목표 1. DB에서 좌표 읽어서 마커 만들기 성공, 마커 아이콘도 바꿈 2. 마커 누르면 showCatInfo로 넘어가서 DB에서 읽어 정보 보여줌 반쯤 성공, 넘어가고 정보도 다 받아지는데 갑자기 이미지 변환이 안 됨

--- a/app/src/main/res/layout/activity_show_catinfo.xml
+++ b/app/src/main/res/layout/activity_show_catinfo.xml
@@ -24,7 +24,17 @@
         android:layout_marginStart="44dp"
         android:layout_marginLeft="44dp"
         android:layout_marginTop="48dp"
-        android:text="cat name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/show_features"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="150dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
