--- a/app/src/main/res/layout/activity_show_catinfo.xml
+++ b/app/src/main/res/layout/activity_show_catinfo.xml
@@ -7,26 +7,27 @@
     tools:context=".showCatInfo">
 
 
-    <GridView
-        android:id="@+id/gridView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="400dp"
-        android:numColumns="2"
+        app:layoutManager="StaggeredGridLayoutManager"
+        app:spanCount="2"
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="100dp"
-        app:layout_constraintTop_toBottomOf="@id/gridView" >
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView"
+        app:layout_constraintBottom_toTopOf="@id/L2"
+        android:id="@+id/L1" >
 
         <TextView
             android:id="@+id/name"
@@ -40,8 +41,9 @@
             android:background="@drawable/round_info"
             android:scrollbars="vertical"
             android:layout_marginTop="10dp"
+            android:padding="20dp"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="65dp"
             app:layout_constraintTop_toBottomOf="@id/name" />
 
         <TextView
@@ -57,6 +59,7 @@
             android:id="@+id/show_features"
             android:layout_width="match_parent"
             android:layout_height="120dp"
+            android:padding="20dp"
             android:background="@drawable/round_info"
             android:scrollbars="vertical"
             android:layout_marginTop="10dp"
@@ -64,47 +67,41 @@
 
     </LinearLayout>
 
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_goMain"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_btn"
-        android:layout_marginLeft="30dp"
-        android:layout_marginBottom="30dp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:textSize="17sp"
-        android:text="메 인"
+        android:orientation="horizontal"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="30dp" />
+        android:id="@+id/L2" >
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_btn"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="30dp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:textSize="17sp"
-        android:text="정보 수정"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="30dp" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_goMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_btn"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:text="메 인" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_btn"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:text="정보 수정" />
+    </LinearLayout>
 
 
-    <!--    <ImageView-->
-    <!--        android:id="@+id/imageView"-->
-    <!--        android:layout_width="200dp"-->
-    <!--        android:layout_height="200dp"-->
-    <!--        android:layout_marginBottom="21dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.514"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintVertical_bias="0.688" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
