--- a/app/src/main/res/layout/activity_show_catinfo.xml
+++ b/app/src/main/res/layout/activity_show_catinfo.xml
@@ -7,17 +7,43 @@
     tools:context=".showCatInfo">
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="400dp"
-        app:layoutManager="StaggeredGridLayoutManager"
-        app:spanCount="2"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:id="@+id/F1"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="400dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="20dp"
+            android:gravity="center"
+            android:id="@+id/noInfo">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textSize="17sp"
+                android:text="사진이 없어요"
+                android:gravity="center_horizontal" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="정보 수정을 통해 사진을 추가할 수 있어요"
+                android:gravity="center_horizontal" />
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="StaggeredGridLayoutManager"
+            app:spanCount="2" />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +51,7 @@
         android:orientation="vertical"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/recyclerView"
+        app:layout_constraintTop_toBottomOf="@id/F1"
         app:layout_constraintBottom_toTopOf="@id/L2"
         android:id="@+id/L1" >
 
@@ -84,7 +110,7 @@
             android:textStyle="bold"
             android:textSize="17sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:text="메 인" />
+            android:text="뒤 로" />
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
