warning 등 1차적으로 정리 함수로 몇 개 빼냄

--- a/app/src/main/res/layout/activity_show_album.xml
+++ b/app/src/main/res/layout/activity_show_album.xml
@@ -22,7 +22,8 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="별명으로 검색" />
+            android:hint="별명으로 검색"
+            android:importantForAutofill="no" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_search"
