--- a/app/src/main/res/layout/activity_show_catinfo.xml
+++ b/app/src/main/res/layout/activity_show_catinfo.xml
@@ -110,7 +110,7 @@
             android:textStyle="bold"
             android:textSize="17sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:text="뒤 로" />
+            android:text="뒤로 가기" />
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
