--- a/app/src/main/res/layout/activity_show_catinfo.xml
+++ b/app/src/main/res/layout/activity_show_catinfo.xml
@@ -1,133 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".showCatInfo"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".showCatInfo">
+    android:layout_height="match_parent">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/layout1"
+        android:visibility="visible" >
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/F1"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="400dp" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="20dp"
+                android:gravity="center"
+                android:id="@+id/noInfo">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textSize="17sp"
+                    android:text="사진이 없어요"
+                    android:gravity="center_horizontal" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:text="정보 수정을 통해 사진을 추가할 수 있어요"
+                    android:gravity="center_horizontal" />
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="StaggeredGridLayoutManager"
+                app:spanCount="2" />
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            app:layout_constraintTop_toBottomOf="@id/F1"
+            app:layout_constraintBottom_toTopOf="@id/L2"
+            android:id="@+id/L1" >
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="이름" />
+            <TextView
+                android:id="@+id/show_name"
+                android:background="@drawable/round_info"
+                android:scrollbars="vertical"
+                android:layout_marginTop="10dp"
+                android:padding="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                app:layout_constraintTop_toBottomOf="@id/name" />
+
+            <TextView
+                android:id="@+id/features"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="특징"
+                app:layout_constraintTop_toBottomOf="@id/show_name" />
+            <TextView
+                android:id="@+id/show_features"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:padding="20dp"
+                android:background="@drawable/round_info"
+                android:scrollbars="vertical"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/features" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/L2" >
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_goMain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round_btn"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:textSize="17sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:text="뒤로 가기" />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round_btn"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:textSize="17sp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:text="정보 수정" />
+        </LinearLayout>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/F1"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="400dp" >
+        android:id="@+id/layout2"
+        android:visibility="invisible" >
+
+        <com.github.chrisbanes.photoview.PhotoView
+            android:id="@+id/photoView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <LinearLayout
+            android:id="@+id/btns"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="20dp"
-            android:gravity="center"
-            android:id="@+id/noInfo">
-            <TextView
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center" >
+            <Button
+                android:id="@+id/btn_left"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
+                android:layout_gravity="start"
+                android:background="#00ff0000"
                 android:textStyle="bold"
                 android:textSize="17sp"
-                android:text="사진이 없어요"
-                android:gravity="center_horizontal" />
-            <TextView
+                android:text="&lt;" />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+            <Button
+                android:id="@+id/btn_right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:text="정보 수정을 통해 사진을 추가할 수 있어요"
-                android:gravity="center_horizontal" />
+                android:layout_gravity="end"
+                android:background="#00ff0000"
+                android:textStyle="bold"
+                android:textSize="17sp"
+                android:text="&gt;" />
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="StaggeredGridLayoutManager"
-            app:spanCount="2" />
+
     </FrameLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/F1"
-        app:layout_constraintBottom_toTopOf="@id/L2"
-        android:id="@+id/L1" >
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:text="이름" />
-        <TextView
-            android:id="@+id/show_name"
-            android:background="@drawable/round_info"
-            android:scrollbars="vertical"
-            android:layout_marginTop="10dp"
-            android:padding="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            app:layout_constraintTop_toBottomOf="@id/name" />
+</FrameLayout>
 
-        <TextView
-            android:id="@+id/features"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:text="특징"
-            app:layout_constraintTop_toBottomOf="@id/show_name" />
-        <TextView
-            android:id="@+id/show_features"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:padding="20dp"
-            android:background="@drawable/round_info"
-            android:scrollbars="vertical"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/features" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/L2" >
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_goMain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/round_btn"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="17sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:text="뒤로 가기" />
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/round_btn"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="17sp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:text="정보 수정" />
-    </LinearLayout>
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
