--- a/app/src/main/res/layout/activity_show_catinfo.xml
+++ b/app/src/main/res/layout/activity_show_catinfo.xml
@@ -153,31 +153,56 @@
         <LinearLayout
             android:id="@+id/btns"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center" >
-            <Button
-                android:id="@+id/btn_left"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:background="#00ff0000"
-                android:textStyle="bold"
-                android:textSize="17sp"
-                android:text="&lt;" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_gravity="center">
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
-            <Button
-                android:id="@+id/btn_right"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center" >
+                <Button
+                    android:id="@+id/btn_left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:background="#00ff0000"
+                    android:textStyle="bold"
+                    android:textSize="17sp"
+                    android:text="&lt;" />
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+                <Button
+                    android:id="@+id/btn_right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="#00ff0000"
+                    android:textStyle="bold"
+                    android:textSize="17sp"
+                    android:text="&gt;" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+            <ImageButton
+                android:id="@+id/btn_download"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:background="#00ff0000"
-                android:textStyle="bold"
-                android:textSize="17sp"
-                android:text="&gt;" />
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:padding="0dp"
+                android:src="@drawable/download"
+                android:layout_marginEnd="20dp" />
         </LinearLayout>
 
 
