1. editInfo: 이름, 특징 추가 및 삭제 가능 2. editInfo: 동적 생성 뷰에 태그 넣어줘서 삭제 성공, 꾹 누르면 삭제 가능 3. editInfo: 이미지 여러 장 업로드, 앨범 여러 번 액세스 가능
다음 목표:
1. 정보 등록 시 현재 위치(위도 경도)로 마커 만들기
2. 고객센터 탭(메일 보내기)
3. 사용자 별 api
등등

--- a/app/src/main/res/layout/activity_edit_info.xml
+++ b/app/src/main/res/layout/activity_edit_info.xml
@@ -10,42 +10,73 @@
     android:padding="20dp"
     tools:context=".editInfo">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="이름"
-        android:layout_marginLeft="10dp"
-        android:textStyle="bold"
-        android:textSize="17sp"
-        android:layout_marginStart="10dp" />
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이름"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:layout_marginStart="10dp" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_addName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_btn_2"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold" />
+    </LinearLayout>
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:scrollbars="none"
         android:padding="10dp">
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/namesSpace"
             android:orientation="horizontal">
         </LinearLayout>
     </HorizontalScrollView>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="특징"
-        android:layout_marginLeft="10dp"
-        android:textStyle="bold"
-        android:textSize="17sp"
-        android:layout_marginStart="10dp" />
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="특징"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:layout_marginStart="10dp" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_addFeature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_btn_2"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold" />
+    </LinearLayout>
+
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:scrollbars="none"
         android:padding="10dp">
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/featuresSpace"
             android:orientation="horizontal">
@@ -59,7 +90,7 @@
         android:padding="10dp">
         <LinearLayout
             android:id="@+id/imageSpace"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_addImg"
